@@ -71,19 +71,8 @@ fdatasync(int file_descriptor)
 		goto out;
 	}
 
-	if(FLAG_IS_SET(fd->fd_Flags,FDF_IS_SOCKET))
-	{
-		__set_errno(EINVAL);
+	if(__sync_fd(fd,0) < 0) /* flush just the data */
 		goto out;
-	}
-
-	if(fd->fd_DefaultFile == ZERO)
-	{
-		__set_errno(EBADF);
-		goto out;
-	}
-
-	__sync_fd(fd,0); /* flush just the data */
 
 	result = 0;
 
