@@ -22,6 +22,9 @@
 - Added more safety checks to verify that file descriptor
   file handles are valid.
 
+- Made the file descriptor checks in the fsync() and fdatasync()
+  functions more robust.
+
 
 c.lib 1.189 (5.3.2005)
 
